--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,7 +40,8 @@ jobs:
       - name: Scan Docker image for vulnerabilities with Trivy
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: './Dockerfile' 
+          scan-type: 'fs'
+          input: '.'
           format: 'table'
           exit-code: '1'
           severity: 'CRITICAL,HIGH'
